src/main/resources/k8s/istio/nacos-istio-deploy-svc.yaml
# webapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
        - name: nacos
          image: registry.cn-beijing.aliyuncs.com/king019/nacos:2.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8848
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
spec:
  #  type: NodePort
  ports:
    - port: 8848
      targetPort: 8848
      #    nodePort: 30001
      protocol: TCP
  selector:
    app: nacos
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
    - host: k8s.com
      http:
        paths:
          - path: /nacos
            pathType: Prefix
            backend:
              service:
                name: nacos
                port:
                  number: 8848
